--- a/web/index.html
+++ b/web/index.html
@@ -3,18 +3,19 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="scaffolded-by" content="https://github.com/google/stagehand">
-    <title>dartP</title>
+
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="favicon.ico">
     <script defer src="main.dart.js"></script>
 </head>
 
 <body>
 
-  <div id="output"></div>
+        
+    <h3>姓名</h3>
+    <div id="name">
+    </div>
 
+    
+    <button id="CallButton"> 点名 </button>
 </body>
 </html>
